Fixed dashboard error, crop tool bug, disabled crop tool on mobile

--- a/sandbox/bubble_meteor/client/stylesheets/style.styl
+++ b/sandbox/bubble_meteor/client/stylesheets/style.styl
@@ -2794,6 +2794,7 @@ cover-btns-width-small  =  130px
     border           1px solid main-xlight
     border-radius    10px
     padding          20px
+    z-index          10
   #dashboard-icon-3a
     position         absolute
     top              90px
@@ -2810,6 +2811,7 @@ cover-btns-width-small  =  130px
     position         absolute
     top              90px
     right            30px
+    z-index          10
 .dashboard-item-container
   width            100%
   height           auto
